@@ -3198,6 +3198,22 @@ void fit_loop_from_widget(GtkWidget *dialog) {
 }
 
 
+/*  ----------------------------------------------------------------------- */
+/*                         construct a molecule and update                  */
+/*  ----------------------------------------------------------------------- */
+int clear_and_update_molecule(int molecule_number, SCM molecule_expression) {
+
+   if (is_valid_model_molecule(molecule_number)) {
+
+      CMMDBManager *mol = 0;
+
+      
+
+      graphics_draw();
+   }
+}
+
+
 
 /*  ----------------------------------------------------------------------- */
 /*                         Align and Mutate GUI                             */
